# zetteltypsten

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
assets/templates/: _zettel.typ
crates/zt-app/: Cargo.toml
crates/zt-app/src/: main.rs
crates/zt-book/: Cargo.toml
crates/zt-book/src/: builder.rs  config.rs  export.rs  lib.rs  search.rs  template.rs
crates/zt-core/: Cargo.toml
crates/zt-core/src/: config.rs  lib.rs  link.rs  note.rs  rel_path.rs  tag.rs  vault.rs
crates/zt-db/: Cargo.toml
crates/zt-db/src/: db.rs  fts.rs  index.rs  lib.rs  query.rs  repository.rs
crates/zt-editor/: Cargo.toml
crates/zt-editor/src/: block.rs  buffer.rs  cursor.rs  history.rs  lib.rs
crates/zt-fs/: Cargo.toml
crates/zt-fs/src/: lib.rs  scanner.rs  vault_fs.rs  watcher.rs
crates/zt-index/: Cargo.toml
crates/zt-index/src/: compiled.rs  extractor.rs  indexer.rs  lib.rs  link_graph.rs  tag_index.rs
crates/zt-typst/: Cargo.toml
crates/zt-typst/src/: compiler.rs  lib.rs  vault_doc.rs  world.rs
crates/zt-ui/: Cargo.toml
crates/zt-ui/src/: book_view.rs  editor.rs  file_ops.rs  file_tree.rs  graph_view.rs  lib.rs  note_view.rs  sidebar.rs  theme.rs  typst_canvas.rs  utils.rs  workspace.rs
crates/zt-ui/src/components/: empty_state.rs  mod.rs  sidebar_item.rs  tag_badge.rs
crates/zt-ui/src/theme/: colors.rs  mod.rs  tokens.rs
crates/zt-ui/src/workspace/: graph_sidebar.rs  keybindings.rs  mod.rs  right_panel.rs  tab_bar.rs
