[patch.crates-io]
gpui-component = { path = "vendor/gpui-component" }

[workspace]
members = [
    "crates/zt-app",
    "crates/zt-core",
    "crates/zt-fs",
    "crates/zt-typst",
    "crates/zt-editor",
    "crates/zt-index",
    "crates/zt-ui",
    "crates/zt-book",
    "crates/zt-db",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/vb/zetteltypsten"

[workspace.dependencies]
# Internal crates
zt-core = { path = "crates/zt-core" }
zt-fs = { path = "crates/zt-fs" }
zt-typst = { path = "crates/zt-typst" }
zt-editor = { path = "crates/zt-editor" }
zt-index = { path = "crates/zt-index" }
zt-ui = { path = "crates/zt-ui" }

# GPUI
gpui = "0.2"
gpui-component = "0.5"

# Typst
typst = "0.14"
typst-syntax = "0.14"
typst-svg = "0.14"
typst-html = "0.14"
typst-kit = { version = "0.14", features = ["embed-fonts"] }
typst-pdf = "0.14"
typst-render = "0.14"
typst-assets = { version = "0.14", features = ["fonts"] }
comemo = "0.5"

# Indexing & search
tantivy = "0.22"
petgraph = "0.8"

# Editor
ropey = "1.6"

# Filesystem
notify = "8"
walkdir = "2"

# Serialization & config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Encoding
base64 = "0.22"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
