[package]
name = "zt-book"
version = "0.1.0"
edition = "2021"

[dependencies]
zt-typst = { path = "../zt-typst" }
zt-index = { path = "../zt-index" }
zt-core = { path = "../zt-core" }
zt-db = { path = "../zt-db" }
anyhow = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
