[package]
name = "zt-typst"
version.workspace = true
edition.workspace = true

[dependencies]
zt-core = { workspace = true }
typst = { workspace = true }
typst-syntax = { workspace = true }
typst-svg = { workspace = true }
typst-pdf = { workspace = true }
typst-render = { workspace = true }
typst-html = { workspace = true }
typst-kit = { workspace = true }
base64 = { workspace = true }
typst-assets = { workspace = true }
comemo = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
